Everything is flex

--- a/index.css
+++ b/index.css
@@ -9,6 +9,17 @@ input, button, textarea, select {
     font: inherit;
 }
 
+/* utility */
+.hflex {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.vflex {
+    display: flex;
+    flex-direction: column;
+}
+
 body {
     width: 100%;
     height: 100%;
