Display entry cell preview

--- a/index.css
+++ b/index.css
@@ -40,7 +40,8 @@ label {
     align-items: center;
 }
 
-td {
+.pattern-cell {
+    font-family: monospace;
     border: 1px solid black;
     white-space: nowrap;
 }
