--- a/index.css
+++ b/index.css
@@ -26,6 +26,9 @@ input, button, textarea, select {
     -webkit-overflow-scrolling: touch;
 }
 
+html, body {
+    touch-action: none;
+}
 body {
     width: 100%;
     height: 100%;
@@ -39,7 +42,6 @@ body {
 
     user-select: none;
     -webkit-user-select: none;
-    touch-action: none;
 }
 
 label {
