--- a/index.css
+++ b/index.css
@@ -27,7 +27,11 @@ input, button, textarea, select {
 }
 
 html, body {
+    /* no pinch to zoom */
     touch-action: none;
+    pointer-events: none;
+    /* no swipe to go back or refresh, this should help with tapping buttons near the edge */
+    overscroll-behavior: none;
 }
 body {
     width: 100%;
