--- a/index.css
+++ b/index.css
@@ -33,6 +33,9 @@ html, body {
     /* no swipe to go back or refresh, this should help with tapping buttons near the edge */
     overscroll-behavior: none;
 }
+body * {
+    pointer-events: auto;
+}
 body {
     width: 100%;
     height: 100%;
