Use Jekyll include syntax

--- a/_includes/Main.html
+++ b/_includes/Main.html
@@ -17,14 +17,14 @@
   <script src="src/SequenceEdit.js"></script>
 </head>
 <body>
-  {% include "FileToolbar.html" %}
-  {% include "PlaybackControls.html" %}
-  {% include "SequenceList.html" %}
-  {% include "PatternTable.html" %}
+  {% include FileToolbar.html %}
+  {% include PlaybackControls.html %}
+  {% include SequenceList.html %}
+  {% include PatternTable.html %}
   <div id="errors"></div>
-  {% include "CellEntry.html" %}
+  {% include CellEntry.html %}
 
-  {% include "UtilTemplates.html" %}
+  {% include UtilTemplates.html %}
 
   <script src="index.js"></script>
 </body>
