--- a/_includes/Main.html
+++ b/_includes/Main.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
 
-  <link href="src/WebApp.css" rel="stylesheet">
-  <link href="index.css" rel="stylesheet">
+    <link href="src/ui/WebApp.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
 
-  <script src="src/Module.js"></script>
-  <script src="src/PeriodTable.js"></script>
-  <script src="src/ModLoader.js"></script>
-  <script src="src/ModWriter.js"></script>
-  <script src="src/Playback.js"></script>
-  <script src="src/PatternView.js"></script>
-  <script src="src/Edit.js"></script>
-  <script src="src/PatternEdit.js"></script>
-  <script src="src/SequenceEdit.js"></script>
-</head>
-<body>
-  {% include FileToolbar.html %}
-  {% include PlaybackControls.html %}
-  {% include SequenceList.html %}
-  {% include PatternTable.html %}
-  <div id="errors"></div>
-  {% include CellEntry.html %}
+    <script src="src/Module.js"></script>
+    <script src="src/PeriodTable.js"></script>
+    <script src="src/ModLoader.js"></script>
+    <script src="src/ModWriter.js"></script>
+    <script src="src/Playback.js"></script>
+    <script src="src/Edit.js"></script>
+    <script src="src/PatternEdit.js"></script>
+    <script src="src/SequenceEdit.js"></script>
+    <script src="src/ui/WebApp.js"></script>
+    <script src="src/ui/PatternView.js"></script>
+  </head>
+  <body>
+{% include FileToolbar.html %}
+{% include PlaybackControls.html %}
+{% include SequenceList.html %}
+{% include PatternTable.html %}
+    <div id="errors"></div>
+{% include CellEntry.html %}
 
-  {% include UtilTemplates.html %}
+{% include UtilTemplates.html %}
 
-  <script src="index.js"></script>
-</body>
+    <script src="index.js"></script>
+  </body>
 </html>
