--- a/_includes/Main.html
+++ b/_includes/Main.html
@@ -15,6 +15,7 @@
     <script src="src/PatternEdit.js"></script>
     <script src="src/SequenceEdit.js"></script>
     <script src="src/ui/WebApp.js"></script>
+    <script src="src/ui/UtilTemplates.js"></script>
     <script src="src/ui/PatternView.js"></script>
   </head>
   <body>
