--- a/_includes/Main.html
+++ b/_includes/Main.html
@@ -14,9 +14,11 @@
     <script src="src/Edit.js"></script>
     <script src="src/PatternEdit.js"></script>
     <script src="src/SequenceEdit.js"></script>
+    <script src="src/ui/DOMUtil.js"></script>
     <script src="src/ui/WebApp.js"></script>
     <script src="src/ui/UtilTemplates.js"></script>
     <script src="src/ui/PatternView.js"></script>
+    <script src="src/ui/FileToolbar.js"></script>
   </head>
   <body>
 {% include FileToolbar.html %}
