--- a/_includes/PlaybackControls.html
+++ b/_includes/PlaybackControls.html
@@ -1,34 +1,36 @@
-<form class="vflex" id="playbackControls">
-  <div class="hflex">
-    <button id="playStart" type="button">
-      <img class="icon" src="assets/step-forward.svg">
-    </button>
-    <button id="playPattern" type="button">
-      <img class="icon" src="assets/playlist-play.svg">
-    </button>
-    <button id="playRow" type="button">
-      <img class="icon" src="assets/play.svg">
-    </button>
-    <button id="pause" class="hide" type="button">
-      <img class="icon" src="assets/pause.svg">
-    </button>
-    <label class="label-button">
-      <input type="checkbox" id="patternLoop">
-      <span><img class="icon" src="assets/repeat-variant.svg"></span>
-    </label>
-    <label class="label-button">
-      <input type="checkbox" checked id="follow">
-      <span><img class="icon" src="assets/format-indent-increase.svg"></span>
-    </label>
+<template id="playbackControls">
+  <div class="vflex">
+    <div class="hflex">
+      <button id="playStart" type="button">
+        <img class="icon" src="assets/step-forward.svg">
+      </button>
+      <button id="playPattern" type="button">
+        <img class="icon" src="assets/playlist-play.svg">
+      </button>
+      <button id="playRow" type="button">
+        <img class="icon" src="assets/play.svg">
+      </button>
+      <button id="pause" class="hide" type="button">
+        <img class="icon" src="assets/pause.svg">
+      </button>
+      <label class="label-button">
+        <input type="checkbox" id="patternLoop">
+        <span><img class="icon" src="assets/repeat-variant.svg"></span>
+      </label>
+      <label class="label-button">
+        <input type="checkbox" checked id="follow">
+        <span><img class="icon" src="assets/format-indent-increase.svg"></span>
+      </label>
+    </div>
+    <div class="hflex">
+      <label>
+        Tempo:
+        <input class="small-input" type="number" value="125" id="tempo">
+      </label>
+      <label>
+        Speed:
+        <input class="small-input" type="number" value="6" id="speed">
+      </label>
+    </div>
   </div>
-  <div class="hflex">
-    <label>
-      Tempo:
-      <input class="small-input" type="number" value="125" id="tempo">
-    </label>
-    <label>
-      Speed:
-      <input class="small-input" type="number" value="6" id="speed">
-    </label>
-  </div>
-</form>
+</template>
