Sequence Edit custom element

--- a/_includes/Main.html
+++ b/_includes/Main.html
@@ -19,18 +19,20 @@
     <script src="src/ui/PatternView.js"></script>
     <script src="src/ui/FileToolbar.js"></script>
     <script src="src/ui/PlaybackControls.js"></script>
+    <script src="src/ui/SequenceEdit.js"></script>
   </head>
   <body>
     <!-- template definitions -->
 {% include UtilTemplates.html %}
 {% include FileToolbar.html %}
 {% include PlaybackControls.html %}
+{% include SequenceEdit.html %}
 {% include Cell.html %}
     <script src="src/ui/DOMUtil.js"></script>
 
     <file-toolbar></file-toolbar>
     <playback-controls></playback-controls>
-{% include SequenceList.html %}
+    <sequence-edit></sequence-edit>
 {% include PatternTable.html %}
     <div id="errors"></div>
 {% include CellEntry.html %}
