--- a/_includes/CellEntry.html
+++ b/_includes/CellEntry.html
@@ -1,96 +1,98 @@
-<div class="vflex">
-  <div class="hflex">
-    <button id="lift">
-      <img class="icon" src="assets/eyedropper.svg">
-    </button>
-    <span id="entryCell" class="pattern-cell">
-      <span id="entryPitch" class="cell-pitch"></span>
-      <span id="entryInst" class="cell-inst"></span>
-      <span id="entryEffect" class="cell-effect"></span>
-    </span>
-    <button id="write">
-      <img class="icon" src="assets/pencil.svg">
-    </button>
-    <button id="clear">
-      <img class="icon" src="assets/eraser.svg">
-    </button>
-    <button id="undo">
-      <img class="icon" src="assets/undo.svg">
-    </button>
+<template id="cellEntry">
+  <div class="vflex">
+    <div class="hflex">
+      <button id="lift">
+        <img class="icon" src="assets/eyedropper.svg">
+      </button>
+      <span id="entryCell" class="pattern-cell">
+        <span id="pitch" class="cell-pitch"></span>
+        <span id="inst" class="cell-inst"></span>
+        <span id="effect" class="cell-effect"></span>
+      </span>
+      <button id="write">
+        <img class="icon" src="assets/pencil.svg">
+      </button>
+      <button id="clear">
+        <img class="icon" src="assets/eraser.svg">
+      </button>
+      <button id="undo">
+        <img class="icon" src="assets/undo.svg">
+      </button>
+    </div>
+    <div class="hflex">
+      <label class="label-button">
+        <input type="checkbox" checked id="pitchEnable">
+        <span>Pit</span>
+      </label>
+      <input class="flex-grow" type="range" min="0" max="59" value="36" id="pitchInput">
+    </div>
+    <div class="hflex">
+      <label class="label-button">
+        <input type="checkbox" checked id="sampleEnable">
+        <span>Ins</span>
+      </label>
+      <form id="sampleList" class="hflex flex-grow hscrollable"></form>
+      <button id="setSampleVolume" type="button">V</button>
+    </div>
+    <div class="hflex">
+      <label class="label-button">
+        <input type="checkbox" id="effectEnable">
+        <span>Eff</span>
+      </label>
+      <select id="effectSelect">
+        <option>0: Arpeggio</option>
+        <option>1: Port Up</option>
+        <option>2: Port Down</option>
+        <option>3: Tone Port</option>
+        <option>4: Vibrato</option>
+        <option>5: Volslide+Port</option>
+        <option>6: Volslide+Vib</option>
+        <option>7: Tremolo</option>
+        <option>8: Panning</option>
+        <option>9: Offset</option>
+        <option>A: Volume Slide</option>
+        <option>B: Position Jump</option>
+        <option selected>C: Volume</option>
+        <option>D: Pattern Break</option>
+        <option>E: Extended</option>
+        <option>F: Tempo</option>
+      </select>
+      <select id="param0Select">
+        <option>0</option>
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option>
+        <option>5</option>
+        <option>6</option>
+        <option>7</option>
+        <option>8</option>
+        <option>9</option>
+        <option>A</option>
+        <option>B</option>
+        <option>C</option>
+        <option>D</option>
+        <option>E</option>
+        <option>F</option>
+      </select>
+      <select id="param1Select">
+        <option>0</option>
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option>
+        <option>5</option>
+        <option>6</option>
+        <option>7</option>
+        <option>8</option>
+        <option>9</option>
+        <option>A</option>
+        <option>B</option>
+        <option>C</option>
+        <option>D</option>
+        <option>E</option>
+        <option>F</option>
+      </select>
+    </div>
   </div>
-  <form id="pitchEntry" class="hflex">
-    <label class="label-button">
-      <input type="checkbox" checked id="pitchEnable">
-      <span>Pit</span>
-    </label>
-    <input class="flex-grow" type="range" min="0" max="59" value="36" id="jamPitch">
-  </form>
-  <form id="sampleEntry" class="hflex">
-    <label class="label-button">
-      <input type="checkbox" checked id="sampleEnable">
-      <span>Ins</span>
-    </label>
-    <span id="sampleList" class="hflex flex-grow hscrollable"></span>
-    <button id="setSampleVolume" type="button">V</button>
-  </form>
-  <form id="effectEntry" class="hflex">
-    <label class="label-button">
-      <input type="checkbox" id="effectEnable">
-      <span>Eff</span>
-    </label>
-    <select id="effect">
-      <option>0: Arpeggio</option>
-      <option>1: Port Up</option>
-      <option>2: Port Down</option>
-      <option>3: Tone Port</option>
-      <option>4: Vibrato</option>
-      <option>5: Volslide+Port</option>
-      <option>6: Volslide+Vib</option>
-      <option>7: Tremolo</option>
-      <option>8: Panning</option>
-      <option>9: Offset</option>
-      <option>A: Volume Slide</option>
-      <option>B: Position Jump</option>
-      <option selected>C: Volume</option>
-      <option>D: Pattern Break</option>
-      <option>E: Extended</option>
-      <option>F: Tempo</option>
-    </select>
-    <select id="param0">
-      <option>0</option>
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-      <option>6</option>
-      <option>7</option>
-      <option>8</option>
-      <option>9</option>
-      <option>A</option>
-      <option>B</option>
-      <option>C</option>
-      <option>D</option>
-      <option>E</option>
-      <option>F</option>
-    </select>
-    <select id="param1">
-      <option>0</option>
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-      <option>6</option>
-      <option>7</option>
-      <option>8</option>
-      <option>9</option>
-      <option>A</option>
-      <option>B</option>
-      <option>C</option>
-      <option>D</option>
-      <option>E</option>
-      <option>F</option>
-    </select>
-  </form>
-</div>
+</template>
