--- a/_includes/Main.html
+++ b/_includes/Main.html
@@ -16,11 +16,12 @@
     <script src="src/SequenceEdit.js"></script>
     <script src="src/ui/WebApp.js"></script>
     <script src="src/ui/UtilTemplates.js"></script>
-    <script src="src/ui/PatternView.js"></script>
     <script src="src/ui/FileToolbar.js"></script>
     <script src="src/ui/PlaybackControls.js"></script>
     <script src="src/ui/SequenceEdit.js"></script>
     <script src="src/ui/PatternTable.js"></script>
+    <script src="src/ui/CellEntry.js"></script>
+    <script src="src/ui/Cell.js"></script>
   </head>
   <body>
     <!-- template definitions -->
@@ -29,6 +30,7 @@
 {% include PlaybackControls.html %}
 {% include SequenceEdit.html %}
 {% include PatternTable.html %}
+{% include CellEntry.html %}
 {% include Cell.html %}
     <script src="src/ui/DOMUtil.js"></script>
 
@@ -37,7 +39,7 @@
     <sequence-edit></sequence-edit>
     <pattern-table></pattern-table>
     <div id="errors"></div>
-{% include CellEntry.html %}
+    <cell-entry></cell-entry>
 
     <script src="index.js"></script>
   </body>
