Move main CSS file

--- a/_includes/Main.html
+++ b/_includes/Main.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
 
     <link href="src/ui/WebApp.css" rel="stylesheet">
-    <link href="index.css" rel="stylesheet">
+    <link href="src/ui/Style.css" rel="stylesheet">
 
     <script src="src/Module.js"></script>
     <script src="src/PeriodTable.js"></script>
