Edit module title

--- a/templates/FileToolbar.html
+++ b/templates/FileToolbar.html
@@ -13,6 +13,6 @@
     <button type="button" id="patternZap">
       <img class="icon" src="assets/playlist-remove.svg">
     </button>
-    <output id="title"></output>
+    <input id="title" maxlength="20"></input>
   </div>
 </template>
