Add samples tab (empty)

--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -50,6 +50,7 @@ body {
 button,
 .label-button span {
     display: inline-flex;
+    justify-content: center;
     padding: 6pt 8pt;
     border: 1pt solid #888;
     background: #eee;
