--- a/templates/CellEntry.html
+++ b/templates/CellEntry.html
@@ -32,7 +32,7 @@
         <span>Ins</span>
       </label>
       <form id="sampleList" class="hflex flex-grow hscrollable"></form>
-      <button id="setSampleVolume" type="button">V</button>
+      <button id="setSampleVolume">V</button>
     </div>
     <div class="hflex">
       <label class="label-button">
