--- a/templates/FileToolbar.html
+++ b/templates/FileToolbar.html
@@ -4,15 +4,15 @@
       <input type="file" id="fileSelect" autocomplete="off">
       <span><img class="icon" src="assets/folder-open.svg"></span>
     </label>
-    <button type="button" id="fileDownload">
+    <button id="fileDownload">
       <img class="icon" src="assets/web.svg">
     </button>
-    <button type="button" id="fileSave">
+    <button id="fileSave">
       <img class="icon" src="assets/download.svg">
     </button>
-    <button type="button" id="patternZap">
+    <button id="patternZap">
       <img class="icon" src="assets/playlist-remove.svg">
     </button>
-    <input id="title" maxlength="20"></input>
+    <input id="title" maxlength="20">
   </div>
 </template>
