--- a/templates/PlaybackControls.html
+++ b/templates/PlaybackControls.html
@@ -1,16 +1,16 @@
 <template id="playbackControls">
   <div class="vflex">
     <div class="hflex">
-      <button id="playStart" type="button">
+      <button id="playStart">
         <img class="icon" src="assets/step-forward.svg">
       </button>
-      <button id="playPattern" type="button">
+      <button id="playPattern">
         <img class="icon" src="assets/playlist-play.svg">
       </button>
-      <button id="playRow" type="button">
+      <button id="playRow">
         <img class="icon" src="assets/play.svg">
       </button>
-      <button id="pause" class="hide" type="button">
+      <button id="pause" class="hide">
         <img class="icon" src="assets/pause.svg">
       </button>
       <label class="label-button">
