--- a/templates/AppMain.html
+++ b/templates/AppMain.html
@@ -6,11 +6,11 @@
   <form id="appTabs" class="hflex">
     <label class="label-button flex-grow">
       <input type="radio" name="app-tab" value="patterns" checked>
-      <span class="flex-grow">Patterns</span>
+      <span>Patterns</span>
     </label>
     <label class="label-button flex-grow">
       <input type="radio" name="app-tab" value="samples">
-      <span class="flex-grow">Samples</span>
+      <span>Samples</span>
     </label>
   </form>
   <div id="appTabBody" class="vflex flex-grow">
