--- a/templates/PatternTable.html
+++ b/templates/PatternTable.html
@@ -5,7 +5,7 @@
     <input type="checkbox" checked>
     <input type="checkbox" checked>
   </div>
-  <div class="scrollable flex-grow" id="patternScroll">
+  <div class="hscrollable vscrollable flex-grow" id="patternScroll">
     <div class="pattern-table-space"></div>
     <table></table>
     <div class="pattern-table-space"></div>
