Show sample list

--- a/templates/AppMain.html
+++ b/templates/AppMain.html
@@ -20,6 +20,7 @@
       <cell-entry></cell-entry>
     </div>
     <div id="samples" class="vflex flex-grow hide">
+      <samples-list></samples-list>
     </div>
   </div>
 </template>
