Edit sample properties

--- a/templates/FileToolbar.html
+++ b/templates/FileToolbar.html
@@ -13,6 +13,9 @@
     <button id="patternZap">
       <img class="icon" src="assets/playlist-remove.svg">
     </button>
+    <button id="undo">
+      <img class="icon" src="assets/undo.svg">
+    </button>
     <input id="title" maxlength="20">
   </div>
 </template>
