--- a/templates/SamplesList.html
+++ b/templates/SamplesList.html
@@ -1,7 +1,6 @@
 <template id="samplesList">
   <div class="vflex flex-grow">
     <form class="vflex flex-grow vscrollable"></form>
-    <div class="vflex flex-grow">
-    </div>
+    <sample-edit></sample-edit>
   </div>
 </template>
