Load sample audio files

--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -12,5 +12,15 @@
       Finetune:
       <input id="finetune" type="number">
     </span>
+    <span class="hflex">
+      Wave file:
+      <div class="vflex">
+        <input id="file" type="file" accept="audio/*">
+        <span class="hflex">
+          Resample
+          <input id="sampleRate" type="number" value="16574.27">
+        </span>
+      </div>
+    </span>
   </div>
 </template>
