Update playback with new samples

--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -17,7 +17,7 @@
       <div class="vflex">
         <input id="file" type="file" accept="audio/*">
         <span class="hflex">
-          Resample
+          Resample:
           <input id="sampleRate" type="number" value="16574.27">
         </span>
       </div>
