Add sample button

--- a/templates/SamplesList.html
+++ b/templates/SamplesList.html
@@ -1,6 +1,9 @@
 <template id="samplesList">
   <div class="vflex flex-grow">
-    <form class="vflex flex-grow vscrollable"></form>
+    <div class="vflex flex-grow vscrollable">
+      <form id="sampleList" class="vflex"></form>
+      <button id="addSample">+</button>
+    </div>
     <sample-edit></sample-edit>
   </div>
 </template>
