--- a/templates/SamplesList.html
+++ b/templates/SamplesList.html
@@ -5,5 +5,6 @@
       <button id="addSample">+</button>
     </div>
     <sample-edit></sample-edit>
+    <button id="delSample">Delete</button>
   </div>
 </template>
