Show selected sample number

--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -1,6 +1,10 @@
 <template id="sampleEdit">
   <div class="vflex flex-grow">
     <span class="hflex">
+      Sample&nbsp;
+      <output id="number"></output>
+    </span>
+    <span class="hflex">
       Name:
       <input id="name" maxlength="22">
     </span>
