--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -10,11 +10,13 @@
     </span>
     <span class="hflex">
       Volume:
-      <input id="volume" type="number" min="0" max="64">
+      <input id="volume" type="range" min="0" max="64">
+      <output id="volumeOut"></output>
     </span>
     <span class="hflex">
       Finetune:
-      <input id="finetune" type="number" min="-8" max="7">
+      <input id="finetune" type="range" min="-8" max="7">
+      <output id="finetuneOut"></output>
     </span>
     <span class="hflex">
       Wave file:
