Unglue FileToolbar and app

--- a/templates/PlaybackControls.html
+++ b/templates/PlaybackControls.html
@@ -21,6 +21,10 @@
         <input type="checkbox" checked id="follow">
         <span><img class="icon" src="assets/format-indent-increase.svg"></span>
       </label>
+      <span class="flex-grow"></span>
+      <button id="undo">
+        <img class="icon" src="assets/undo.svg">
+      </button>
     </div>
     <div class="hflex">
       <label>
