--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -10,13 +10,13 @@
     </span>
     <span class="hflex">
       Volume:
-      <input id="volume" type="range" min="0" max="64">
-      <output id="volumeOut"></output>
+      <input id="volume" type="range" class="flex-grow" min="0" max="64">
+      <output id="volumeOut" class="small-input"></output>
     </span>
     <span class="hflex">
       Finetune:
-      <input id="finetune" type="range" min="-8" max="7">
-      <output id="finetuneOut"></output>
+      <input id="finetune" type="range" class="flex-grow" min="-8" max="7">
+      <output id="finetuneOut" class="small-input"></output>
     </span>
     <span class="hflex">
       Wave file:
