--- a/templates/AppMain.html
+++ b/templates/AppMain.html
@@ -1,12 +1,15 @@
 <template id="appMain">
   <div id="errors"></div>
-  <file-toolbar></file-toolbar>
   <playback-controls></playback-controls>
 
   <form id="appTabs" class="hflex">
     <label class="label-button flex-grow">
-      <input type="radio" name="app-tab" value="patterns" checked>
-      <span>Patterns</span>
+      <input type="radio" name="app-tab" value="arrange" checked>
+      <span>Arrange</span>
+    </label>
+    <label class="label-button flex-grow">
+      <input type="radio" name="app-tab" value="sequence">
+      <span>Sequence</span>
     </label>
     <label class="label-button flex-grow">
       <input type="radio" name="app-tab" value="samples">
@@ -14,7 +17,10 @@
     </label>
   </form>
   <div id="appTabBody" class="vflex flex-grow">
-    <div id="patterns" class="vflex flex-grow">
+    <div id="arrange" class="vflex flex-grow">
+      <file-toolbar></file-toolbar>
+    </div>
+    <div id="sequence" class="vflex flex-grow hide">
       <sequence-edit></sequence-edit>
       <pattern-table></pattern-table>
       <cell-entry></cell-entry>
