Module Properties panel

--- a/templates/AppMain.html
+++ b/templates/AppMain.html
@@ -19,6 +19,7 @@
   <div id="appTabBody" class="vflex flex-grow">
     <div id="arrange" class="vflex flex-grow">
       <file-toolbar></file-toolbar>
+      <module-properties></module-properties>
     </div>
     <div id="sequence" class="vflex flex-grow hide">
       <sequence-edit></sequence-edit>
