Improve radio button handling

--- a/templates/FileToolbar.html
+++ b/templates/FileToolbar.html
@@ -1,7 +1,7 @@
 <template id="fileToolbar">
   <div class="hflex">
     <label class="label-button">
-      <input type="file" id="fileSelect" autocomplete="off">
+      <input type="file" id="fileSelect">
       <span><img class="icon" src="assets/folder-open.svg"></span>
     </label>
     <button id="fileDownload">
