Buttons to add/remove channels

--- a/templates/ModuleProperties.html
+++ b/templates/ModuleProperties.html
@@ -7,6 +7,8 @@
     <span class="hflex">
       Channels:&nbsp;
       <output id="channelCount"></output>
+      <button id="addChannels">+</button>
+      <button id="delChannels">-</button>
     </span>
     <span class="hflex">
       Samples:&nbsp;
