Display module file size in properties

--- a/templates/ModuleProperties.html
+++ b/templates/ModuleProperties.html
@@ -23,6 +23,10 @@
       <output id="sequenceCount"></output>
     </span>
     <span class="hflex">
+      File size:&nbsp;
+      <output id="fileSize"></output>
+    </span>
+    <span class="hflex">
       <button id="patternZap">
         <img class="icon" src="assets/playlist-remove.svg">
       </button>
