--- a/templates/PatternTable.html
+++ b/templates/PatternTable.html
@@ -8,7 +8,12 @@
     </div>
     <div class="hscrollable vscrollable flex-grow" id="patternScroll">
       <div class="pattern-table-space"></div>
-      <table></table>
+      <table>
+        <thead>
+          <tr></tr>
+        </thead>
+        <tbody></tbody>
+      </table>
       <div class="pattern-table-space"></div>
     </div>
     <cell-entry></cell-entry>
