Turn off autocomplete

--- a/templates/CellEntry.html
+++ b/templates/CellEntry.html
@@ -28,7 +28,7 @@
         <input type="checkbox" checked id="sampleEnable">
         <span>Ins</span>
       </label>
-      <form id="sampleList" class="hflex flex-grow hscrollable"></form>
+      <form id="sampleList" class="hflex flex-grow hscrollable" autocomplete="off"></form>
     </div>
     <div class="hflex">
       <label class="label-button">
