--- a/templates/ModuleProperties.html
+++ b/templates/ModuleProperties.html
@@ -2,7 +2,7 @@
   <div class="vflex">
     <span class="hflex">
       Title:
-      <input id="title" maxlength="20">
+      <input id="title" maxlength="20" autocomplete="off">
     </span>
     <span class="hflex">
       Channels:&nbsp;
