--- a/templates/PlaybackControls.html
+++ b/templates/PlaybackControls.html
@@ -29,11 +29,11 @@
     <div class="hflex">
       <label>
         Tempo:
-        <input class="small-input" type="number" value="125" id="tempo">
+        <input class="small-input" type="number" value="125" id="tempo" autocomplete="off">
       </label>
       <label>
         Speed:
-        <input class="small-input" type="number" value="6" id="speed">
+        <input class="small-input" type="number" value="6" id="speed" autocomplete="off">
       </label>
     </div>
   </div>
