--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -6,25 +6,25 @@
     </span>
     <span class="hflex">
       Name:
-      <input id="name" maxlength="22">
+      <input id="name" maxlength="22" autocomplete="off">
     </span>
     <span class="hflex">
       Volume:
-      <input id="volume" type="range" class="flex-grow" min="0" max="64">
+      <input id="volume" type="range" class="flex-grow" min="0" max="64" autocomplete="off">
       <output id="volumeOut" class="small-input"></output>
     </span>
     <span class="hflex">
       Finetune:
-      <input id="finetune" type="range" class="flex-grow" min="-8" max="7">
+      <input id="finetune" type="range" class="flex-grow" min="-8" max="7" autocomplete="off">
       <output id="finetuneOut" class="small-input"></output>
     </span>
     <span class="hflex">
       Wave file:
       <div class="vflex">
-        <input id="file" type="file" accept="audio/*">
+        <input id="file" type="file" accept="audio/*" autocomplete="off">
         <span class="hflex">
           Resample:
-          <input id="sampleRate" type="number" value="16574.27">
+          <input id="sampleRate" type="number" value="16574.27" autocomplete="off">
         </span>
       </div>
     </span>
