--- a/templates/SamplesList.html
+++ b/templates/SamplesList.html
@@ -1,7 +1,7 @@
 <template id="samplesList">
   <div class="vflex flex-grow">
     <div class="vflex flex-grow vscrollable">
-      <form id="sampleList" class="vflex"></form>
+      <form id="sampleList" class="vflex" autocomplete="off"></form>
       <button id="addSample">+</button>
     </div>
     <sample-edit></sample-edit>
