--- a/templates/AppMain.html
+++ b/templates/AppMain.html
@@ -2,7 +2,7 @@
   <div id="errors"></div>
   <playback-controls></playback-controls>
 
-  <form id="appTabs" class="hflex">
+  <form id="appTabs" class="hflex" autocomplete="off">
     <label class="label-button flex-grow">
       <input type="radio" name="app-tab" value="arrange" checked>
       <span>Arrange</span>
