Use divs for flexboxes

--- a/templates/ModuleProperties.html
+++ b/templates/ModuleProperties.html
@@ -1,35 +1,35 @@
 <template id="moduleProperties">
   <div class="vflex">
-    <span class="hflex">
+    <div class="hflex">
       Title:
       <input id="title" maxlength="20" autocomplete="off">
-    </span>
-    <span class="hflex">
+    </div>
+    <div class="hflex">
       Channels:&nbsp;
       <output id="channelCount"></output>
       <button id="addChannels">+</button>
       <button id="delChannels">-</button>
-    </span>
-    <span class="hflex">
+    </div>
+    <div class="hflex">
       Samples:&nbsp;
       <output id="sampleCount"></output>
-    </span>
-    <span class="hflex">
+    </div>
+    <div class="hflex">
       Patterns:&nbsp;
       <output id="patternCount"></output>
-    </span>
-    <span class="hflex">
+    </div>
+    <div class="hflex">
       Length:&nbsp;
       <output id="sequenceCount"></output>
-    </span>
-    <span class="hflex">
+    </div>
+    <div class="hflex">
       File size:&nbsp;
       <output id="fileSize"></output>
-    </span>
-    <span class="hflex">
+    </div>
+    <div class="hflex">
       <button id="patternZap">
         <img class="icon" src="assets/playlist-remove.svg">
       </button>
-    </span>
+    </div>
   </div>
 </template>
