--- a/templates/PlaybackControls.html
+++ b/templates/PlaybackControls.html
@@ -21,7 +21,7 @@
         <input type="checkbox" checked id="follow">
         <span><img class="icon" src="assets/format-indent-increase.svg"></span>
       </label>
-      <span class="flex-grow"></span>
+      <div class="flex-grow"></div>
       <button id="undo">
         <img class="icon" src="assets/undo.svg">
       </button>
