Edit sample loop

--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -28,6 +28,15 @@
         </div>
       </div>
     </div>
+    <div class="vflex">
+      Loop:
+      <input id="loopStart" type="range" class="flex-grow" min="0" autocomplete="off">
+      <input id="loopEnd" type="range" class="flex-grow" min="0" autocomplete="off">
+    </div>
+    <div class="hflex">
+      <button id="clearLoop">Clear Loop</button>
+      <button id="trim">Trim</button>
+    </div>
     <button id="jam">Listen</button>
   </div>
 </template>
