--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -30,8 +30,8 @@
     </div>
     <div class="vflex">
       Loop:
-      <input id="loopStart" type="range" class="flex-grow" min="0" autocomplete="off">
-      <input id="loopEnd" type="range" class="flex-grow" min="0" autocomplete="off">
+      <input id="loopStart" type="range" min="0" autocomplete="off">
+      <input id="loopEnd" type="range" min="0" autocomplete="off">
     </div>
     <div class="hflex">
       <button id="clearLoop">Clear Loop</button>
