Audio load error handling

--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -24,7 +24,7 @@
         <input id="file" type="file" accept="audio/*" autocomplete="off">
         <div class="hflex">
           Resample:
-          <input id="sampleRate" type="number" value="16574.27" autocomplete="off">
+          <input id="sampleRate" type="number" value="16574.27">
         </div>
       </div>
     </div>
